--- a/moh.html
+++ b/moh.html
@@ -339,15 +339,37 @@
                     </section>
 
                     <section class="form">
-                        <label>Name *</label>
-                        <input type="text" placeholder="Enter Your username">
-                        <label>Email Address *</label>
-                        <input type="email">
+                        <form>
+                            <label>Name *</label>
+                            <input type="text" placeholder="Enter Your username" />
+                            <label>Email Address *</label>
+                            <input type="text" placeholder="Enter yout email" />
+                            <label>Number *</label>
+                            <input type="text" placeholder="Enter your number" />
+                            <label>Your Latter *</label>
+                            <textarea></textarea>
+                            <input type="submit" value="Contact Me" />
+                        </form>
                     </section>
                 </section>
             </section>
 
         <!-- End Contact me -->
+
+        <!-- Star Footer -->
+            <footer>
+                <section class="container">
+                    <span>Copyright &copy; 2020 Mohammed</span>
+                    <ul>
+                        <li><i class="fab fa-facebook"></i></li>
+                        <li><i class="fab fa-twitter"></i></li>
+                        <li><i class="fab fa-instagram"></i></li>
+                        <li><i class="fab fa-linkedin"></i></li>
+                    </ul>
+                </section>
+            </footer>
+
+        <!-- End Footer -->
         <script src="js/main.js"></script>
     </body>
 </html>
